--- a/helm-guestbook/charts/helm-guestbook-chart1/values.yaml
+++ b/helm-guestbook/charts/helm-guestbook-chart1/values.yaml
@@ -5,8 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
-  tag: 0.1
+  #repository: gcr.io/heptio-images/ks-guestbook-demo
+  repository: 997329461819.dkr.ecr.ap-southeast-2.amazonaws.com/ks-guestbook-demo:latest
+  #tag: 0.1
+  tag: latest
   pullPolicy: IfNotPresent
 
 service:
